--- a/TeamCitySharp/TeamCitySharp.nuspec
+++ b/TeamCitySharp/TeamCitySharp.nuspec
@@ -1,31 +1,27 @@
 <?xml version="1.0"?>
 <package>
 	<metadata>
-		<id>RuskinDantra.Extensions</id>
+		<id>TeamCitySharp-Ruskin</id>
 		<version>$version$</version>
-		<title>Common extensions used by Ruskin Dantra</title>
+		<title>TeamCitySharp</title>
 		<authors>Ruskin Dantra</authors>
 		<owners>ruskindantra</owners>
-		<projectUrl>http://ruskindantra.github.io/extensions/</projectUrl>
+		<projectUrl>https://github.com/ruskindantra/TeamCitySharp</projectUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<licenseUrl>https://github.com/ruskindantra/extensions/blob/master/LICENSE</licenseUrl>
-		<description>Some common extensions used by Ruskin Dantra during the course of his coding life</description>
+		<licenseUrl>https://github.com/ruskindantra/TeamCitySharp/blob/master/LICENSE</licenseUrl>
+		<description>Fork of TeamCitySharp to include some extra search variables</description>
 		<copyright>Copyright ©  2016 Ruskin Dantra</copyright>
-		<tags>CSharp extensions</tags>
+		<tags>TeamCitySharp</tags>
 		<releaseNotes>
-			3-Jan-16
-				* Added HasInterface extension method
+			4-Apr-16
+				* Added untilDate to BuildLocator
 		</releaseNotes>
 		<dependencies>
-			<dependency id="JetBrains.Annotations" version="10.0.0" />
+			<dependency id="EasyHttp" version="1.6.85.0" />
+			<dependency id="JsonFx" version="2.0.1209.2802" />
 		</dependencies>
 	</metadata>
 	<files>
-		<file src="\bin\release\NET40\RuskinDantra.Extensions.dll" target="lib\net40" />
-		<file src="\bin\release\NET45\RuskinDantra.Extensions.dll" target="lib\net45" />
-		<file src="\bin\release\NET451\RuskinDantra.Extensions.dll" target="lib\net451" />
-		<file src="\bin\release\NET452\RuskinDantra.Extensions.dll" target="lib\net452" />
-		<file src="\bin\release\NET46\RuskinDantra.Extensions.dll" target="lib\net46" />
-		<file src="\bin\release\NET461\RuskinDantra.Extensions.dll" target="lib\net461" />
+		<file src="\bin\release\TeamCitySharp.dll" target="lib\net452" />
 	</files>
 </package>
