--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ before_build:
   - nuget restore TeamCitySharp.sln
 after_build:
   - nuget pack TeamCitySharp\TeamCitySharp.nuspec -Version %appveyor_build_version%
-  - appveyor PushArtifact TeamCitySharp.%appveyor_build_version%.nupkg
+  - appveyor PushArtifact TeamCitySharp-Ruskin.%appveyor_build_version%.nupkg
 deploy:
   provider: NuGet
   api_key:
