--- a/TeamCitySharp/TeamCitySharp.csproj
+++ b/TeamCitySharp/TeamCitySharp.csproj
@@ -71,6 +71,7 @@
     <Compile Include="ActionTypes\Projects.cs" />
     <Compile Include="ActionTypes\ServerInformation.cs" />
     <Compile Include="Connection\ITeamCityCaller.cs" />
+    <Compile Include="Locators\ChangeLocator.cs" />
     <Compile Include="TeamCityClient.cs" />
     <Compile Include="ActionTypes\Users.cs" />
     <Compile Include="ActionTypes\VcsRoots.cs" />
